# sentry-webhook-event-pusher

./: .env.example  .gitignore  Cargo.toml  README.md
src/: email.rs  main.rs  sentry_definition.rs
