[package]
name = "sentry-webhook-event-pusher"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
chrono = "0.4.38"
dotenv = "0.15.0"
reqwest = {version = "0.12.4", features = ["json"]}
serde = {version = "1.0.203", features = ["derive"]  }
serde_derive = "1.0.203"
serde_json = "1.0.117"
openssl = {version = "*", features = ["vendored"]}
lettre = "0.11"
futures = "0.3.30"
